<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/card_white_rounded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Mode"
        android:textAppearance="@style/TextAppearance.OORB.SectionTitle"
        android:layout_marginBottom="16dp" />

    <RadioGroup
        android:id="@+id/mode_select_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_mode_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Light" />
        <RadioButton
            android:id="@+id/radio_mode_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dark"
            android:layout_marginTop="8dp" />
    </RadioGroup>

</LinearLayout> 