...
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:importantForAccessibility="no" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="2dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Settings"
            android:importantForAccessibility="yes"
...
